# AILawAnalyzer

./: .gitignore  README.md  agent-guidelines.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/analysis/: chunker.py  explainer_v0.py  extractor_v0.py
app/domain/: enums.py
app/features/analysis/: api.py  artifacts_v1.py  change_list_v1.py  explainer_v1.py  impacts_v1.py  knowledge_match_v1.py  mechanism_validators_v1.py  mechanisms_v1.py  models.py  references_v1.py  retrieval_v1.py  scoring.py  segmentation_quality_v1.py  segmentation_v1.py  service.py  structure_tree_v1.py
app/features/documents/: api.py  service.py
app/features/ingest/: api.py  service.py
app/features/knowledge/: api.py  auth.py  errors.py  hashing.py  models.py  schemas.py  validation.py  web.py
app/features/ocr/: api.py  service.py
app/features/runs/: api.py  service.py
app/infra/: db.py  ocr.py  pdf_render.py  repo_bills.py  repo_chunks.py  repo_documents.py  repo_errors.py  repo_evidence.py  repo_jobs.py  repo_knowledge.py  repo_pages.py  repo_runs.py  storage.py
app/templates/admin/: base.html  knowledge_create.html  knowledge_detail.html  knowledge_edit.html  knowledge_home.html  knowledge_list.html
app/web/: analysis.py  evidence.py  ocr.py  runs.py  upload.py
civic_sustainability_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: analysis-artifacts-v1.md
plans/: poc-plan.md  sme-ingestion-plan.md
tests/: conftest.py  test_storage.py  test_upload_integration.py
